# alterator-objects-builder-prototype

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.h
.gear/: alterator-browser.spec  rules
model/: CMakeLists.txt  model.cpp  model.h  object.cpp  object.h  objectitem.cpp  objectitem.h
src/: CMakeLists.txt  aobuilderimpl.cpp  aobuilderimpl.h  aobuilderinterface.h  constants.h
src/builders/: baseobjectbuilder.cpp  baseobjectbuilder.h  categoryobjectbuilder.cpp  categoryobjectbuilder.h  legacyobjectbuilder.cpp  legacyobjectbuilder.h  localapplicationobjectbuilder.cpp  localapplicationobjectbuilder.h  objectbuilder.h  objectbuilderfactory.cpp  objectbuilderfactory.h
src/datasource/: datasourcedbusimpl.cpp  datasourcedbusimpl.h  datasourceinterface.h
src/objects/: basicobject.cpp  basicobject.h  category.cpp  category.h  legacyobject.h  localappobject.cpp  localappobject.h  object.cpp  object.h
src/parsers/: baseobjectparser.cpp  baseobjectparser.h  objectparserinterface.h
